--- a/最終課題/css/style.css
+++ b/最終課題/css/style.css
@@ -4,7 +4,6 @@
 }
 
 body{
-     background-color: #F5F5F5; 
      width: 100%;
      font-family: 'Courier New','Gulim';
 }
@@ -42,7 +41,8 @@ p1{
 .music{
       background-size: cover;
       -moz-background-size:cover;
-      color: #7D6C46;
+      color: #7d8687;
+      background-color: #f2f3f3;
 }
 
 h2{
@@ -67,4 +67,30 @@ h2{
     margin-bottom: 20px;
     padding: 10px;
     
+}
+
+.place{
+    background-size: cover;
+      -moz-background-size:cover;
+      color: #7d8687;
+}
+
+.col-1{
+     height: 600px;
+     overflow: hidden;
+     padding: 10px;
+     margin-top: 30px;
+     margin-bottom: 30px;
+    float: left;
+    background-color: aquamarine;
+}
+
+.col-2{
+     width:  auto;
+     height: auto;
+     margin-top: 30px;
+     margin-left: 20px;
+     padding:10px;
+     float: left;
+     background-color: aqua;
 }
