--- a/最終課題/css/style.css
+++ b/最終課題/css/style.css
@@ -38,6 +38,46 @@ p1{
      float: left;
 }
 
+p2{
+    color: #7d8687;
+     margin-top: 30px;
+     float: left;    
+}
+
+.iam{
+      background-size: cover;
+      -moz-background-size:cover;
+      color: #7d8687;
+}
+
+.list-iam{
+     margin-top: 30px;
+    list-style-type: none;
+}
+
+a{
+    font-size: px;
+    color: #04346B;
+    background: white;
+    border: 1px solid #04346B;
+    padding: 5px;
+    margin-top: 10px;
+    margin-right: 10px;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: 1s;
+    float: left;
+}
+
+
+a:hover{
+     background: #04346B;
+    color: white;
+    
+}
+
+
+
 .music{
       background-size: cover;
       -moz-background-size:cover;
@@ -69,28 +109,27 @@ h2{
     
 }
 
-.place{
+.creator{
     background-size: cover;
       -moz-background-size:cover;
       color: #7d8687;
 }
 
-.col-1{
-     height: 600px;
-     overflow: hidden;
-     padding: 10px;
-     margin-top: 30px;
-     margin-bottom: 30px;
-    float: left;
-    background-color: aquamarine;
+.list-creator{
+    margin-top: 30px;
+    list-style-type: none;      
 }
 
-.col-2{
-     width:  auto;
-     height: auto;
-     margin-top: 30px;
-     margin-left: 20px;
-     padding:10px;
-     float: left;
-     background-color: aqua;
+.list-creator li{
+    margin-bottom: 10px ;   
+}
+
+
+.image{
+     position:relative;
+     width: 250px;
+}
+
+.coments{
+    margin-left: 20px;
 }
