--- a/最終課題/css/style.css
+++ b/最終課題/css/style.css
@@ -8,6 +8,10 @@ body{
      font-family: 'Courier New','Gulim';
 }
 
+a:link { color: #F7D94C; }
+a:visited { color: #305A56; }
+a:hover { color: #F7D94C; }
+a:active { color: #305A56; }
 
 .top{
      width: 100%;
@@ -25,11 +29,9 @@ body{
 }
 
 h1{ 
-     border: 1px solid ghostwhite;
      color: ghostwhite;
-     border-radius: px;
-     padding: 10px;
-     width: 100px;
+     padding: px;
+     width: auto;
 }
 
 p1{
@@ -48,6 +50,9 @@ p2{
       background-size: cover;
       -moz-background-size:cover;
       color: #7d8687;
+      margin-botom: 30px;
+    text-align: center;
+    
 }
 
 .list-iam{
@@ -55,34 +60,15 @@ p2{
     list-style-type: none;
 }
 
-a{
-    font-size: px;
-    color: #04346B;
-    background: white;
-    border: 1px solid #04346B;
-    padding: 5px;
-    margin-top: 10px;
-    margin-right: 10px;
-    text-decoration: none;
-    border-radius: 4px;
-    transition: 1s;
-    float: left;
-}
-
-
-a:hover{
-     background: #04346B;
-    color: white;
-    
-}
-
 
 
 .music{
-      background-size: cover;
-      -moz-background-size:cover;
-      color: #7d8687;
-      background-color: #f2f3f3;
+       width: 100%;
+     height: auto;
+     background-image: url(../images/stars.jpg);
+     background-size: cover;
+     -moz-background-size:cover;
+     color: ghostwhite;
 }
 
 h2{
@@ -91,6 +77,10 @@ h2{
      border-radius: px;
      padding: 10px;
      width: 100px;
+     text-align: center;
+}
+h3{
+     color: #7d8687;   
 }
 
 .list-music{
@@ -109,19 +99,38 @@ h2{
     
 }
 
+.place{
+     background-size: cover;
+      -moz-background-size:cover;
+      color: #7d8687;
+      background-color: #f2f3f3;   
+}
+
+.list-place li{
+        background-color: white;
+        margin-top: 20px;
+        padding: 10px;
+        list-style-type: none;
+}
+
+
 .creator{
     background-size: cover;
       -moz-background-size:cover;
       color: #7d8687;
+      background-color: ghostwhite;
 }
 
 .list-creator{
     margin-top: 30px;
-    list-style-type: none;      
+    list-style-type: none;
+    background-color:;
 }
 
 .list-creator li{
-    margin-bottom: 10px ;   
+    margin-bottom: 10px ;
+    background-color:white;
+    
 }
 
 
